# jcvb

./: .env.example  .flake8  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: launch.json
forms/: camp-feedback-2026.json  registry.json
scripts/: build.sh  deploy.sh  dev.sh  distribute_newsletter.sh
site/: README.md
site/content/: site.toml
site/content/newsletters/: 2025-07-06-JCVB-Newsletter.md  2025-07-14-JCVB-Newsletter.md  2025-07-21-JCVB-Newsletter.md  2025-07-29-JCVB-Newsletter.md  2025-08-05-JCVB-Newsletter.md  2025-08-10-JCVB-Newsletter.md  2025-08-17-JCVB-Newsletter.md  2025-08-24-JCVB-Newsletter.md  2025-08-31-JCVB-Newsletter.md  2025-09-07-JCVB-Newsletter.md  2025-09-13-JCVB-Newsletter.md  2025-09-21-JCVB-Newsletter.md  2025-09-29-JCVB-Newsletter.md  2025-10-05-JCVB-Newsletter.md  2025-10-07-JCVB-Newsletter.md  2025-10-12-JCVB-Newsletter.md  2025-10-19-JCVB-Newsletter.md  2025-10-26-JCVB-Newsletter.md  2025-11-02-JCVB-Newsletter.md  2025-11-04-JCVB-Newsletter.md  2025-11-16-JCVB-Newsletter.md  2025-12-26-JCVB-Newsletter.md  2026-02-11-JCVB-Newsletter.md  2026-03-24-JCVB-Newsletter.md  2026-04-19-JCVB-Newsletter.md  2026-04-27-JCVB-Newsletter.md  2026-05-27-JCVB-Newsletter.md  2026-07-09-JCVB-Newsletter.md
site/content/schedule/: 2026.toml
site/public/: index.html
site/public/brand/: index.html
site/public/newsletters/: index.html
site/public/schedule/: index.html
site/static/css/: brand.css  site.css
site/templates/: base.html.j2  brand.html.j2  home.html.j2  newsletter.html.j2  newsletters_index.html.j2  schedule.html.j2
src/jcvb/: _consts.py  forms.py  newsletter.py  site_build.py
tests/: test_forms.py
(+33 files in other folders)
