[project]
name = "jcvb"
version = "0.1.0"
description = ""
authors = [
    {name = "Tim Kutcher", email = "tim@tkutcher.com"}
]
packages = [
    { include = "jcvb", from = "src" }
]

readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black (>=25.1.0,<26.0.0)",
    "markdown (>=3.8.2,<4.0.0)",
    "sendgrid (>=6.12.4,<7.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

