[project]
name = "jcvb"
version = "0.1.0"
description = ""
authors = [
    {name = "Tim Kutcher", email = "tim@tkutcher.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "markdown>=3.8.2,<4.0.0",
    "sendgrid>=6.12.4",
    "python-dotenv>=1.1.1,<2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jcvb"]
