[project]
name = "jcvb"
version = "0.1.0"
description = ""
authors = [
    {name = "Tim Kutcher", email = "tim@tkutcher.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "markdown>=3.8.2,<4.0.0",
    "sendgrid>=6.12.4",
    "python-dotenv>=1.1.1,<2.0.0",
    "jinja2>=3.1.6",
    "pillow>=12.3.0",
    "requests>=2.31,<3",
    "segno>=1.6,<2",
]

[dependency-groups]
dev = [
    "pytest>=8.0,<9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jcvb"]
